--- a/views/calendar.ejs
+++ b/views/calendar.ejs
@@ -78,7 +78,7 @@
 
 
 
-<!-- toast mensajes error -->
+<!-- Toast - ventana errores -->
 <div class="toast-container position-fixed bottom-0 end-0 p-3">
     <div id="myToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header">
@@ -89,7 +89,7 @@
             Error
         </div>
     </div>
-</div>    
+</div>
 
 
 <%- include('./partials/footer') %>
