--- a/views/home.ejs
+++ b/views/home.ejs
@@ -109,7 +109,7 @@
             <span class="icono" id="linkCopiarEmail">&#9993; Admin: <span><%= adminEmail %></span></span>
         </div>
         <div class="copy">
-            © 2024 Pablo | pablogcl38@gmail.com
+            © 2024 GymLog | pablogcl38@gmail.com
         </div>
     </footer>
     
