--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,11 +6,11 @@
         <h2>Regístrate</h2>
       
         <label>
-            <input type="email" name="email" id="" placeholder="correo electrónico">
+            <input type="email" name="email" id="email-input" placeholder="correo electrónico">
         </label>
         <div class="email error"></div>
         <label>
-            <input type="password" name="password" id="" placeholder="contraseña">
+            <input type="password" name="password" id="pass-input" placeholder="contraseña">
         </label>
         <div class="password error"></div>
     
