--- a/src/scss/login-signup.scss
+++ b/src/scss/login-signup.scss
@@ -50,6 +50,13 @@
             margin-top: 30px;
             font-size: 20px;
             width: 100%;
+
+            &:nth-child(1) {
+                background-color: #00bc8c;
+            }
+            &:nth-child(2) {
+                background-color: #00bc8c;
+            }
         }
 
         .error {
