--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,11 +7,11 @@
     <form action="">
         <h2>Iniciar sesión</h2>
         <label>
-            <input type="email" name="email" id="" placeholder="correo electrónico">
+            <input type="email" name="email" id="email-input" placeholder="correo electrónico">
             <div class="email error"></div>
         </label>
         <label>
-            <input type="password" name="password" id="" placeholder="contraseña">
+            <input type="password" name="password" id="pass-input"  placeholder="contraseña">
             <div class="password error"></div>
         </label>
         
